backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:

      tolerations:
      - key: "private"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
        
      containers:
      - name: backend
        image: anishka012/backend-custom-fe-be
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
